# gcp-scanner

./: .gitignore  .mega-linter.yaml  README.md
.github/workflows/: ci.yaml
scanner/: .python-version  cloudsql.py  pyproject.toml  requirements.txt  spanner.py  spanner_check_test.py  test_spanner_logic.py
visualizer/: Dockerfile  README.md  package-lock.json  package.json
visualizer/public/: index.html  results.json
visualizer/src/: App.js
