[tool.poetry]
name = "scanner"
version = "0.1.0"
description = "A tool for searching for GCP resources across multiple projects."
authors = ["Jon Choate"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.authors]
name = "Jon Choate"
email = "choatej@gmail.com"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
google-auth = "2.32.0"
google-cloud-spanner = "3.47.0"
google-cloud-resource-manager = "1.12.4"
google-api-python-client = "2.137.0"
plotly = "5.22.0"
networkx = "3.3"
numpy = "2.0.0"
json2html = "1.3.0"
oauth2client = "4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
