[tool.poetry]
name = "scanner"
dynamic = ["version"]
description = "A tool for searching for GCP resources across multiple projects."
authors = [
    { name = "Jon Choate", email = "choatej@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "Google Cloud",
    "GCP",
    "Infrastructure"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Cloud Engineers",
    "Topic :: Software Development :: Infrastructure Tools",
    "License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
Homepage = "https://github.com/choatej/gcp-scanner"
Documentation = "https://github.com/choatej/gcp-scanner/blob/main/README.md"
Repository = "https://github.com/choatej/gcp-scanner.git"
Issues = "https://github.com/choatej/gcp-scanner/issues"
Changelog = "https://github.com/choatej/gcp-scanner/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.12.0"

[tool.poetry.group.dev.dependencies]
google-auth = "2.32.0"
google-cloud-spanner = "3.47.0"
google-cloud-resource-manager = "1.12.4"
google-api-python-client = "2.137.0"
plotly = "5.22.0"
networkx = "3.3"
numpy = "2.0.0"
json2html = "1.3.0"
oauth2client = "4.1.3"

[tool.poetry.scripts]
spanner = "spanner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
